fixed the overflow-x on about page

--- a/src/assets/css/modules/_base.scss
+++ b/src/assets/css/modules/_base.scss
@@ -162,8 +162,10 @@ body {
   overflow-x: hidden;
 }
 
+
 main {
   position: relative;
+  overflow-x: hidden;
   &::before {
     content: "";
     display: block;
